syntax = "proto3";

package edu.kit.tm.cm.proto;

option java_multiple_files = true;
option java_package = "edu.kit.tm.cm.proto";

// building management service

service BuildingManagement {

  rpc GetBuilding(GetBuildingRequest) returns (GetBuildingResponse);
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);
  rpc GetComponent(GetComponentRequest) returns (GetComponentResponse);

  rpc ListBuildings(ListBuildingsRequest) returns (ListBuildingsResponse);
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse);
  rpc ListComponents(ListComponentsRequest) returns (ListComponentsResponse);
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);

  rpc ListFavoriteBuildings(ListFavoriteBuildingsRequest) returns (ListFavoriteBuildingsResponse);
  rpc ListFavoriteRooms(ListFavoriteRoomsRequest) returns (ListFavoriteRoomsResponse);
  rpc ListFavoriteComponents(ListFavoriteComponentsRequest) returns (ListFavoriteComponentsResponse);

  rpc IsFavorite(IsFavoriteRequest) returns (IsFavoriteResponse);

  rpc CreateBuilding(CreateBuildingRequest) returns (CreateBuildingResponse);
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc CreateComponent(CreateComponentRequest) returns (CreateComponentResponse);
  rpc CreateFavorite(CreateFavoriteRequest) returns (CreateFavoriteResponse);

  rpc UpdateBuilding(UpdateBuildingRequest) returns (UpdateBuildingResponse);
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse);
  rpc UpdateComponent(UpdateComponentRequest) returns (UpdateComponentResponse);

  rpc RemoveBuilding(RemoveRequest) returns (RemoveResponse);
  rpc RemoveRoom(RemoveRequest) returns (RemoveResponse);
  rpc RemoveComponent(RemoveRequest) returns (RemoveResponse);
  rpc RemoveFavorite(RemoveFavoriteRequest) returns (RemoveResponse);

}

// request and response messages

message IsFavoriteRequest{
  string owner = 1;
  string identification_number = 2;
}

message IsFavoriteResponse{
  bool is_favorite = 1;
}

message GetBuildingRequest{
  string identification_number = 1;
}

message GetBuildingResponse{
  GrpcBuilding grpc_building = 1;
}

message ListBuildingsRequest{
  GrpcBuildingFilterValueSelection grpc_filter_value_selection = 1;
}

message ListBuildingsResponse{
  repeated GrpcBuilding buildings = 1;
}

message GetRoomRequest{
  string identification_number = 1;
}

message GetRoomResponse{
  GrpcRoom room = 1;
}

message GetComponentRequest{
  string identification_number = 1;
}

message GetComponentResponse{
  GrpcComponent component = 1;
}

message ListRoomsRequest{
  GrpcBuildingFilterValueSelection grpc_filter_value_selection = 1;
  string identification_number = 2;
}

message ListRoomsResponse{
  repeated GrpcRoom rooms = 1;
}

message ListComponentsRequest{
  string identification_number = 2;
}

message ListComponentsResponse{
  repeated GrpcComponent components = 1;
}

message ListFavoriteBuildingsRequest{
  GrpcBuildingFilterValueSelection grpc_filter_value_selection = 1;
  string owner = 2;
}

message ListFavoriteRoomsRequest{
  GrpcBuildingFilterValueSelection grpc_filter_value_selection = 1;
  string owner = 2;
}

message ListFavoriteComponentsRequest{
  string owner = 2;
}

message ListFavoriteBuildingsResponse{
  repeated GrpcBuilding buildings = 1;
}

message ListFavoriteRoomsResponse{
  repeated GrpcRoom rooms = 1;
}

message ListFavoriteComponentsResponse{
  repeated GrpcComponent components = 1;
}

message ListNotificationsRequest{
  string identification_number = 2;
}

message ListNotificationsResponse{
  repeated GrpcNotification notifications = 1;
}

message CreateBuildingRequest{
  string building_name = 1;
  string building_number = 2;
  GrpcCampusLocation campus_location = 3;
  GrpcGeographicalLocation grpc_geographical_location = 5;
  GrpcFloors grpc_floors = 6;
  string building_address = 7;
}

message CreateBuildingResponse{
  GrpcBuilding building = 1;
}

message CreateRoomRequest{
  string room_name = 1;
  string room_number = 2;
  int32 floor = 3;
  string parent_identification_number = 5;
  GrpcRoomType room_type = 6;
  GrpcGeographicalLocation grpc_geographical_location = 7;
}

message CreateRoomResponse{
  GrpcRoom room = 1;
}

message CreateComponentRequest{
  string component_description = 1;
  GrpcComponentType component_type = 4;
  GrpcGeographicalLocation grpc_geographical_location = 5;
  string parent_identification_number = 6;
}

message CreateComponentResponse{
  GrpcComponent component = 1;
}

message CreateFavoriteRequest{
  string reference_identification_number = 1;
  string owner = 2;
}

message CreateFavoriteResponse{
}

message UpdateBuildingRequest{
  string building_name = 1;
  string building_number = 2;
  GrpcCampusLocation campus_location = 3;
  string identification_number = 4;
  GrpcGeographicalLocation grpc_geographical_location = 5;
  GrpcFloors grpc_floors = 6;
  string building_address = 7;
}

message UpdateBuildingResponse{
  GrpcBuilding building = 1;
}

message UpdateRoomRequest{
  string room_name = 1;
  string room_number = 2;
  int32 floor = 3;
  string identification_number = 4;
  string parent_identification_number = 5;
  GrpcRoomType room_type = 6;
  GrpcGeographicalLocation grpc_geographical_location = 7;
}

message UpdateRoomResponse{
  GrpcRoom room = 1;
}

message UpdateComponentRequest{
  string component_description = 1;
  string identification_number = 2;
  string parent_identification_number = 3;
  GrpcComponentType component_type = 4;
  GrpcGeographicalLocation grpc_geographical_location = 5;
}

message UpdateComponentResponse{
  GrpcComponent component = 1;
}

message RemoveRequest{
  string identification_number = 1;
}

message RemoveFavoriteRequest{
  string identification_number = 1;
  string owner = 2;
}

message RemoveResponse{
}

// single message constructions

message GrpcNotification{
  int64 created_on = 1;
  string identification_number = 2;
  string parent_identification_number = 3;
  string notification_title = 4;
  string notification_description = 5;
  int64 last_modified_on = 6;
}

message GrpcRoom{
  string room_name = 1;
  string room_number = 2;
  int32 floor = 3;
  string identification_number = 4;
  string parent_identification_number = 5;
  GrpcRoomType room_type = 6;
  GrpcGeographicalLocation grpc_geographical_location = 7;
}

message GrpcBuilding{
  string building_name = 1;
  string building_number = 2;
  GrpcCampusLocation campus_location = 3;
  string identification_number = 4;
  GrpcGeographicalLocation grpc_geographical_location = 5;
  GrpcFloors grpc_floors = 6;
  string building_address = 7;
}

enum GrpcCampusLocation{
  UNKNOWN_CAMPUS_LOCATION = 0;
  NORTH_CAMPUS = 1;
  EAST_CAMPUS = 2;
  WEST_CAMPUS = 3;
  SOUTH_CAMPUS = 4;
}

message GrpcGeographicalLocation{
  double latitude = 1;
  double longitude = 2;
}

message GrpcFloors{
  int32 lowest_floor = 1;
  int32 highest_floor = 2;
}

enum GrpcRoomType{
  UNKNOWN_ROOM_TYPE = 0;
  RESTROOM = 1;
  RESTROOM_HANDICAPPED = 2;
  OFFICE = 3;
  LABORATORY = 4;
  SEMINAR_ROOM = 5;
  LECTURE_ROOM = 6;
  SPORTS = 7;
  CAFETERIA = 8;
  LIBRARY = 9;
}

message GrpcComponent{
  string component_description = 1;
  string identification_number = 2;
  string parent_identification_number = 3;
  GrpcComponentType component_type = 4;
  GrpcGeographicalLocation grpc_geographical_location = 5;
}

enum GrpcComponentType{
  UNKNOWN_COMPONENT_TYPE = 0;
  ELEVATOR = 1;
  STAIRS = 2;
}

message GrpcBuildingFilterValueSelection{
  repeated GrpcComponentType grpc_component_types = 1;
  repeated GrpcRoomType grpc_room_types = 2;
  repeated GrpcCampusLocation grpc_campus_locations = 3;
  repeated int32 floors = 4;
}
